Debugger: Set a QTC_DEBUGGER_PROCESS environment variable

It can then be queried in debugger python scripts to detect that the
debugger process was launched by Qt Creator.

Task-number: QTCREATORBUG-31769
Change-Id: I7d46ff8bb0312be98ff3cdd5bab9c97e4de6164b
Reviewed-by: hjk <hjk@qt.io>